Completed image cropping component and fixed other bugs

--- a/src/app/article-portal/image-preview/image-preview.component.scss
+++ b/src/app/article-portal/image-preview/image-preview.component.scss
@@ -8,6 +8,10 @@
 
 .options-row {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
+}
+
+.end {
+ align-self: flex-end;
 }
